--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 
   <footer>
     <span>Created By <a href="index.html">Bhageerath</a> | <span class="far fa-copyright"></span> 2020 All rights reserved 😜</span>
+
   </footer>
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="script.js"></script>
@@ -408,10 +409,8 @@
 
 
 
-
-
-
-
+      <a href='https://acadooghostwriter.com/'>Acadoo</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=50d54b5b5f2918d0941d0bcf1870e7241d63a54c'></script>
+     <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/922552/t/2"></script>
 
 
 
