--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         </div>
         <div class="column right">
 
-          <p>I am Bhageerath. I am fascinating about the technology which is emerging these days and eager to see and take part in the development and change in technology of upcoming decade. Besides app development, I am skilled in app development and problem solving too. This is my first portfolio which is a very exiting experience for me do this using my knowledge of html, CSS, Java Script and bootstrap.</p>
+          <p>I'm Bhageerath, deeply captivated by the ever-evolving landscape of technology. My passion lies in exploring and contributing to the advancements that shape the upcoming decade. With expertise in app development and a knack for problem-solving, I'm poised to make meaningful contributions to the tech industry. Crafting this portfolio using my proficiency in HTML, CSS, JavaScript, and Bootstrap has been an exhilarating journey, marking the beginning of an exciting chapter in my career.
+
+          </p>
           <!-- <a href="#">Download CV</a> -->
         </div>
       </div>
@@ -203,21 +205,15 @@
       <h2 class="title">My skills</h2>
       <div class="skills-content">
         <div class="column left">
-          <div class="text">Our creative skills &amp; experiences.</div>
+          <div class="text">My creative skills &amp; experiences.</div>
           <ul>
-  <li> Signup website (Express, JavaScript , HTML , CSS , APIs) with heroku hosting:
-</li>
-  <li> Drum kit website using advanced JS and DOM Manipulation:
-</li>
-  <li> Todo list website using EJS and Mongoose:
-</li>
-<li> Stylised Personal Site using HTML and CSS:
-</li>
-<li>  Design for TinDog website to find nearby dogs for sale using HTML , CSS and BootStrap:
-</li>
-<li>  Developed sudoku solving algorithm using backtracking and data structures
-
-</li></ul>
+            <li>Signup website (Express, JavaScript, HTML, CSS, APIs) hosted on Heroku:</li>
+            <li>Drum kit website showcasing advanced JavaScript and DOM Manipulation:</li>
+            <li>Todo list website implemented with EJS and Mongoose:</li>
+            <li>Personal site crafted with stylized HTML and CSS:</li>
+            <li>Design for TinDog website, facilitating the search for nearby dogs for sale using HTML, CSS, and Bootstrap:</li>
+            <li>Developed a Sudoku solving algorithm employing backtracking and data structures:</li>
+          </ul>
 
         </div>
         <div class="column right">
@@ -273,107 +269,53 @@
       <div class="contact-content">
         <div class="column left">
           <div class="text">Get in Touch</div>
-          <p>
-            TAP BITMOJI TO KNOW MORE ABOUT ME😜
-          </p>
-          <p>Having any queries or suggestions you can reach me 👇</p>
-
-          <p></p>
-          <p>
-            <br>
-          </p>
-          <p></p>
+          <p>TAP THE BITMOJI TO KNOW MORE ABOUT ME 😜</p>
+          <p>Have any queries or suggestions? Feel free to reach out:</p>
           <div class="icons">
-
             <div class="row">
               <i class="fas fa-map-marker-alt"></i>
               <div class="info">
                 <div class="head">Address</div>
-                <div class="sub-title">Gayatri vidya parishad college of engineering(A)</div>
+                <div class="sub-title">Kakinada, Andhra Pradesh</div>
               </div>
-
-            </div>
-            <div class="row">
-
             </div>
           </div>
         </div>
         <div class="column right">
-    <a href="#abe">
-
-</a>
-<a href="#abs">
-<img src="https://i.pinimg.com/originals/de/52/b7/de52b7bd3fbd77d5ca765bb6c40b3eb0.jpg" alt="Italian Trulli" width="200" height="200">
-</a>
-
-
+          <a href="#abe">
+            <!-- Placeholder for future links or images -->
+          </a>
+          <!-- Image link -->
+          <a href="#abs">
+            <img src="https://i.pinimg.com/originals/de/52/b7/de52b7bd3fbd77d5ca765bb6c40b3eb0.jpg" alt="My Bitmoji" width="200" height="200">
+          </a>
         </div>
       </div>
     </div>
   </section>
+  
 
-  <section id="contact" class="dark-bg padding-top">
-
-  			<div class="me" id="me">
-
-  				<header class="section-header text-right">
-
-  					<h1 class="scrollimation scale-in in"><centre>Drop Me a Line</centre></h1>
-
-
-  				</header>
-
-  				<form id="contact-form" class="bl_form text-center" action="contact.php" method="post" novalidate="">
-  					<span class="field-wrap scrollimation fade-right in">
-  						<label class="control-label" for="contact-name">Name</label>
-  						<div class="lb_wrap" style="position:relative; display: inline;"><input id="contact-name" name="contactName" type="text" class="label_better requiredField" data-new-placeholder="Name" placeholder="Name" data-error-empty="*Enter your name"></div>
-  					</span>
-  					<span class="field-wrap scrollimation fade-in in">
-  						<label class="control-label" for="contact-mail">Email</label>
-  						<div class="lb_wrap" style="position:relative; display: inline;"><input id="contact-mail" name="email" type="email" class="label_better requiredField" data-new-placeholder="Email Address" placeholder="Email Address" data-error-empty="*Enter your email" data-error-invalid="x Invalid email address"></div>
-  					</span>
-  					<span class="field-wrap scrollimation fade-left in">
-  						<label class="control-label" for="contact-message">Message</label>
-  						<div class="lb_wrap" style="position:relative; display: inline;"><textarea id="contact-message" name="comments" rows="1" class="label_better requiredField" data-new-placeholder="Message" placeholder="Message" data-error-empty="*Enter your message" style="margin: 0px; width: 227px; height: 66px;"></textarea></div>
-  					</span>
-
-  					<p class="text-center"><button name="submit" type="submit" class="btn btn-flat icon-left" data-error-message="Error!" data-sending-message="Sending..." data-ok-message="Message Sent"><i class="fa fa-paper-plane"></i>Send Message</button></p>
-  					<input type="hidden" name="submitted" id="submitted" value="true">
-
-  				</form>
-
-  			</div>
-
-  		</section>
-
-<div class="w3-container abs" style="padding:0px 20px;padding-bottom: 0px;" id="abs">
-  <br><br>
-  <h3 class="w3-center"><b>ABOUT ME</b></h3>
-  <div class="row">
-    <div class="column">
-      <img class="img-fluid" src="anusha.jpg" alt="" style="margin-top:0px;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);  border-radius: 10px; ">
-
-
+  
+  <div class="w3-container abs" style="padding: 0px 20px;" id="abs">
+    <br><br>
+    <h3 class="w3-center"><b>ABOUT ME</b></h3>
+    <div class="row">
+      <div class="column">
+        <img class="img-fluid" src="anusha.jpg" alt="" style="margin-top: 0px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); border-radius: 10px;">
+      </div>
+      <div class="column">
+        <ul class="admin-profile">
+          <li><span class="pro-title" style="font-family: Garamond, serif;">Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="pro-detail" style="font-family: Garamond, serif;">KESARI ESWAR BHAGEERATH</span></li>
+          <li><span class="pro-title" style="font-family: Garamond, serif;">Country:&nbsp;&nbsp;</span><span class="pro-detail" style="font-family: Garamond, serif;">India</span></li>
+          <li><span class="pro-title" style="font-family: Garamond, serif;">Location:&nbsp;</span><span class="pro-detail" style="font-family: Garamond, serif;"> KAKINADA</span></li>
+          <li><span class="pro-title" style="font-family: Garamond, serif;">Email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="pro-detail" style="font-family: Garamond, serif;">eswarbhageerath2@gmail.com</span></li>
+          <li><span class="pro-title" style="font-family: Garamond, serif;">Phone:&nbsp;&nbsp;&nbsp;</span><span class="pro-detail" style="font-family: Garamond, serif;">7569607627</span></li>
+        </ul>
+        <p style="font-family: Garamond, serif;">I am a COMPUTER SCIENCE Graduate. My teenage years were spent wondering about how ideas like online shopping, food delivery, and taxi booking became reality. I was fascinated when I received an email from Amazon for each order and when Swiggy showed the estimated delivery time for my food. All those application features, which I now know are API integrations, were a big deal for me back then. Not just these, I also tried to fathom how my phone took videos in slow motion, and now I am figuring out how Siri works and how Netflix gives me just the right recommendations. From watching Tom & Jerry DVDs on television to binge-watching series on Amazon Prime, I believe our generation has witnessed significant technological advancements, and I am eagerly waiting to become a part of many such amazing things in technology that are yet to be discovered by us. I would find it wondrous if I could solve even the tiniest of problems with my software development and data science knowledge.</p>
+      </div>
     </div>
-    <div class="column">
-      <ul class="admin-profile">
-        <li><span class="pro-title" style="font-family: Garamond, serif"> Name :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="pro-detail" style="font-family: Garamond, serif">KESARI ESWAR BHAGEERATH</span></li>
-        <li><span class="pro-title" style="font-family: Garamond, serif"> Country:&nbsp;&nbsp; </span> <span class="pro-detail" style="font-family: Garamond, serif">India</span></li>
-        <li><span class="pro-title" style="font-family: Garamond, serif"> Location:&nbsp; </span> <span class="pro-detail" style="font-family: Garamond, serif">JNTU,KAKINADA</span></li>
-        <li><span class="pro-title" style="font-family: Garamond, serif"> e-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="pro-detail" style="font-family: Garamond, serif">eswarbhageerath2@gmail.com</span></li>
-        <li><span class="pro-title" style="font-family: Garamond, serif"> Phone :&nbsp;&nbsp;&nbsp;</span> <span class="pro-detail" style="font-family: Garamond, serif">7569607627</span></li>
-
-      </ul>
-      <p style="font-family: Garamond, serif">I am a junior COMPUTER SCIENCE ENGINEERING student from GAYATRI VIDYA PARISHD COLLEGE OF ENGINEERING. My teenage years were spent wondering about how did the ideas like online shopping, food delivery and taxi booking become reality. I was fascinated when I got a mail from amazon for each order, when swiggy showed the estimated delivery time for my food. All those application features which now I know are API integrations were a big deal for me back then. Not just these, I also tried to fathom out how my phone took videos in slow motion, and now I am figuring out how Siri works and how netflix gives me just the right recommendations. From watching Tom &amp; Jerry DVD's on television to watching series on Amazon Prime, I think our generation has witnessed a huge technological advancement and I am eagerly waiting to become a part of many such amazing things in technology that are yet to be discovered by us. I would find it wondrous if I was able to solve the tiniest of problems with my software development and data science knowledge
-
-</p>
-    </div>
-
-    </div>
-
-</div>
-
+  </div>
+  
 
   <footer>
     <span>Created By <a href="index.html">Bhageerath</a> | <span class="far fa-copyright"></span> 2020 All rights reserved 😜</span>
