--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h2 class="title">About me</h2>
       <div class="about-content">
         <div class="column left">
-          <img src="images\team.jpeg" alt="" width="370" height="400">
+          <img src="images\team.jpg" alt="" width="370" height="400">
         </div>
         <div class="column right">
 
